Stage 3/5: Working on the gameplay